# django-debug-toolbar-mongo

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
debug_toolbar_mongo/: __init__.py  panel.py  tracker.py
debug_toolbar_mongo/templates/: mongodb-panel.html
example/: settings.py  urls.py  views.py
example/example/management/commands/: gen_mongo_collection.py
example/example/templates/: index.html
